--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<form>
+	<form method="post">
 		<label for="name">Name</label>
 		<input type="text" id="name" required>
 
@@ -16,9 +16,9 @@
 		<input type="email" id="email" required>
 
 		<label for="male">Male</label>
-		<input id="male" type="radio" name="gender">
+		<input id="male" type="radio" name="gender" required>
 		<label for="female">Female</label>
-		<input id="female" type="radio" name="gender">
+		<input id="female" type="radio" name="gender" required>
 
 		<label for="cars">Car Brands</label>
 		<select id="cars">
